@@ -4,15 +4,17 @@ import java.util.List;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Scanner;
+import java.util.Date;
 
 import adt_reto0.factory.*;
+import adt_reto0.classes.*;
 
 public class Menu {
 
 	private Scanner console = new Scanner(System.in);
 
 	private List<String> managerOptions =
-		new ArrayList<String>(List.of(
+		new ArrayList<String>(Arrays.asList(
 			"Manage customers"
 			,"Manage accounts"
 			,"Manage movements"
@@ -20,7 +22,7 @@ public class Menu {
 	);
 		
 	private List<String> customerOptions =
-		new ArrayList<String>(List.of(
+		new ArrayList<String>(Arrays.asList(
 			"Create customer"
 			,"Check customer data"
 			,"List the customer's accounts"
@@ -28,7 +30,7 @@ public class Menu {
 	);
 		
 	private List<String> accountOptions =
-		new ArrayList<String>(List.of(
+		new ArrayList<String>(Arrays.asList(
 			"Create account"
 			,"Check account data"
 			,"List the customers associated with account"
@@ -36,7 +38,7 @@ public class Menu {
 	);
 		
 	private List<String> movementOptions =
-		new ArrayList<String>(List.of(
+		new ArrayList<String>(Arrays.asList(
 			"Make a movement"
 			,"Check account's movements"
 		)
@@ -58,14 +60,6 @@ public class Menu {
 		return console.nextInt();
 	}
 	
-	private int[] getParams(String s) {
-		System.out.print("\nIntroduce the " + s + ": ");
-		String[] input = console.next().split(" ");
-		return Arrays.stream(input)
-			.mapToInt(p -> Integer.parseInt(p))
-			.toArray();
-	}
-
 	private void menuManager() {
 		int option = -1;
 		while(option != 0) {
@@ -92,7 +86,6 @@ public class Menu {
 
 	private void customerManager() {
 		int option = -1;
-		int[] param = {-1};
 		while(option != 0) {
 			this.greeter("Managing customers");
 			option = this.optionPrinter(customerOptions);
@@ -100,16 +93,13 @@ public class Menu {
 				case 0:
 					break;
 				case 1:
-					param = getParams("Customer Id");
-					CustomerDAFactory.getAccessCustomer().createCustomer(param[0]);
+					this.createCustomer();
 					break;
 				case 2:
-					param = getParams("Customer Id");
-					CustomerDAFactory.getAccessCustomer().getCustomerData(param[0]);
+					this.getCustomerData();
 					break;
 				case 3:
-					param = getParams("Customer Id");
-					CustomerDAFactory.getAccessCustomer().listCustomerAccounts(param[0]);
+					this.getCustomerAccounts();
 					break;
 				default:
 					System.out.println("Unknown option!");
@@ -120,7 +110,6 @@ public class Menu {
 
 	private void accountManager() {
 		int option = -1;
-		int[] param = {-1};
 		while(option != 0) {
 			this.greeter("Managing accounts");
 			option = this.optionPrinter(accountOptions);
@@ -128,16 +117,13 @@ public class Menu {
 				case 0:
 					break;
 				case 1:
-					param = getParams("Customer Id");
-					AccountADFactory.getAccessAccount().createAccount(param[0]);
+					this.createAccount();
 					break;
 				case 2:
-					param = getParams("Customer Id && Account Id");
-					AccountADFactory.getAccessAccount().addClientToAccount(param[0], param[1]);
+					this.addClientToAccount();
 					break;
 				case 3:
-					param = getParams("Account Id");
-					AccountADFactory.getAccessAccount().getAccountData(param[0]);
+					this.getAccountData();
 					break;
 				default:
 					System.out.println("Unknown option!");
@@ -145,10 +131,39 @@ public class Menu {
 			}
 		}
 	}
+	
+	private void createAccount() {
+		Param<Integer> param1 = new Param<>(Integer.class,"id");
+		Param<String>  param2 = new Param<>(String.class,"description");
+		Param<Double>  param3 = new Param<>(Double.class,"balance");
+		Param<Double>  param4 = new Param<>(Double.class,"creditLine");
+		Param<Double>  param5 = new Param<>(Double.class,"beginBalance");
+		Param<Date>    param6 = new Param<>(Date.class,"beginBalanceTimestamp");
+		Param<Integer> param7 = new Param<>(Integer.class,"type");
+
+		Account a = new Account(param1.getParams()
+			,param2.getParams()
+			,param3.getParams()
+			,param4.getParams()
+			,param5.getParams()
+			,param6.getParams()
+			,param7.getParams());
+		AccountADFactory.getAccessAccount().createAccount(a);
+	}
+
+	private void addClientToAccount() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Customer Id");
+		Param<Integer> param2 = new Param<>(Integer.class,"Account Id");
+		AccountADFactory.getAccessAccount().addClientToAccount(param1.getParams(), param2.getParams());
+	}
+
+	private void getAccountData() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Account Id");
+		AccountADFactory.getAccessAccount().getAccountData(param1.getParams());
+	}
 
 	private void movementManager() {
 		int option = -1;
-		int[] param = {-1};
 		while(option != 0) {
 			this.greeter("Managing movements");
 			option = this.optionPrinter(movementOptions);
@@ -156,12 +171,10 @@ public class Menu {
 				case 0:
 					break;
 				case 1:
-					param = getParams("Source Account && Destination Account && Ammount");
-					MovementADFactory.getAccessMovement().registerMovement(param[0], param[1], param[2]);
+					this.registerMovement();
 					break;
 				case 2:
-					param = getParams("Account Id");
-					MovementADFactory.getAccessMovement().getAccountMovements(param[0]);
+					this.getAccountMovements();
 					break;
 				default:
 					System.out.println("Unknown option!");
@@ -170,7 +183,57 @@ public class Menu {
 		}
 	}
 
-	void start() {
+	private void createCustomer() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Id");
+		Param<String> param2 = new Param<>(String.class,"firstName");
+		Param<String> param3 = new Param<>(String.class,"lastName");
+		Param<String> param4 = new Param<>(String.class,"middleInitial");
+		Param<String> param5 = new Param<>(String.class,"street");
+		Param<String> param6 = new Param<>(String.class,"city");
+		Param<String> param7 = new Param<>(String.class,"state");
+		Param<String> param8 = new Param<>(String.class,"email");
+		Param<Integer> param9 = new Param<>(Integer.class,"zip");
+		Param<Integer> param10 = new Param<>(Integer.class,"phone");
+		CustomerDAFactory.getAccessCustomer().createCustomer(
+			param1.getParams()
+			,param2.getParams()
+			,param3.getParams()
+			,param4.getParams()
+			,param5.getParams()
+			,param6.getParams()
+			,param7.getParams()
+			,param8.getParams()
+			,param9.getParams()
+			,param10.getParams());
+	}
+	
+	private void registerMovement() {
+		Param<Double> param1 = new Param<>(Double.class,"Destination Account");
+		Param<Double> param2 = new Param<>(Double.class, "Ammount");
+		MovementADFactory.getAccessMovement()
+			.registerMovement(param1.getParams(), param2.getParams());
+	}
+	
+
+	private void getCustomerData() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Customer Id");
+		Customer a = CustomerDAFactory.getAccessCustomer().getCustomerData(param1.getParams().intValue());
+		System.out.println(a.toString());
+	}
+	
+	private void getCustomerAccounts() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Customer Id");
+		ArrayList<Account> a = CustomerDAFactory.getAccessCustomer().getCustomerAccounts(param1.getParams());
+		a.forEach(p -> System.out.println(p.toString()));
+	}
+
+	private void getAccountMovements() {
+		Param<Integer> param1 = new Param<>(Integer.class,"Account Id");
+		Account a = AccountADFactory.getAccessAccount().getAccountData(param1.getParams());
+		a.getMovements().forEach(p -> System.out.println(p.toString()));
+	}
+
+	public void start() {
 		this.menuManager();
 	}
 	
